cabecera con logo y pie con redes sociales (cabecera1 y pie1)

--- a/css/_pies1.css
+++ b/css/_pies1.css
@@ -5,6 +5,9 @@ footer{
     color: var(--colorPrincipal);
     width: 100%;
     text-align: center;
-   
+}
+
+footer a{
+    text-decoration: none;
 }
 
