--- a/css/artiframe.css
+++ b/css/artiframe.css
@@ -1,4 +1,7 @@
+@import url('./_reseterEstilos.css');
+@import url('./_variables.css');
 @import url('./_botones.css');
 @import url('./_esqueletos.css');
-@import url('./_pies.css');
-@import url('./_cabeceras.css');
+@import url('./_pies1.css');
+@import url('./_cabeceras1.css');
+@import url('./_cuerpo.css');
