Definicion de las clases con logo y sin logo para las cabeceras que tiene el logo. Limpieza del codigo css.

--- a/css/artiframe.css
+++ b/css/artiframe.css
@@ -3,5 +3,5 @@
 @import url('./_botones.css');
 @import url('./_esqueletos.css');
 @import url('./_pies1.css');
-@import url('./_cabeceras1.css');
+@import url('./_cabeceras.css');
 @import url('./_cuerpo.css');
