--- a/css/_cabeceras.css
+++ b/css/_cabeceras.css
@@ -1,12 +1,62 @@
 header{
-    display: grid;
-    align-items: center;
     background-color: var(--colorPrincipal);
-    width: 100%;
 }
 
-header h1{
+
+/*Definiones para cabecera sin logo*/
+
+header.sinLogo{
+    display: grid;
+    align-items: center;
+}
+
+header.sinLogo h1{
     text-align: center;
     color: white;
     font: 16pt Impact;
 }
+
+
+/*Definiciones para cabecera con logo*/
+
+/*
+Tenemos dos clases para el header.
+LogoIzquierda hace uso del display grid y
+LogoCentrado no usa display grid
+*/
+
+
+header.conLogo{
+    background-color: var(--colorPrincipal);
+    padding: 0em 1em;
+}
+
+header.conLogo img {
+    height: 7vh;
+    border-radius: 100%;
+}
+
+header.conLogo h1 {
+    font-size: 1.5em;
+}
+
+
+header.conLogo.conLogo--centrado{
+    text-align: center;
+}
+
+header.conLogo.conLogo--centrado h1{
+    display: inline-block;
+}
+
+header.conLogo.conLogo--centrado img{ /*TODO: FIX*/
+    line-height: 10vh;
+}
+
+header.conLogo.conLogo--izquierda{
+    display: grid;
+   grid-template-columns: 10% 90%;
+   align-items: center;
+   grid-gap: 5vh;
+}
+
