--- a/css/_esqueletos.css
+++ b/css/_esqueletos.css
@@ -4,5 +4,55 @@ body{
     margin: 0px auto;
     height: 100vh;
     display: grid;
-    grid-template-rows:10% 85% 5%;
 }
+
+nav{
+    background: var(--colorTerciario);
+}
+
+
+nav ul li{
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 0px 0.2em;
+    padding: 0.3em;
+}
+
+body.simple.simple--navHorizontal{
+    grid-template-rows:auto auto 80% auto;
+}
+
+
+body.simple.simple--navHorizontal nav{
+    display: grid;
+    align-items: center;
+}
+
+body.simple.simple--navHorizontal nav ul{
+    display: grid;
+    align-content: center;
+    grid-auto-flow: column;
+    list-style: none;
+    padding: 0.2em;
+}
+
+body.simple.simple--navHorizontal nav ul li{
+   max-width: 15em;
+   min-width: 10em;
+   white-space: nowrap;
+   overflow: hidden;
+   text-overflow: ellipsis;
+}
+
+body.simple.simple--navHorizontal nav.navHorizontal--centrado ul{
+    justify-content: center;
+}
+
+body.simple.simple--navHorizontal nav.navHorizontal--izquierda ul{
+    justify-content: left;
+}
+
+body.simple.simple--navHorizontal nav.navHorizontal--derecha ul{
+    justify-content: right;
+}
+
