--- a/css/_botones.css
+++ b/css/_botones.css
@@ -1,5 +1,20 @@
 button{
-    padding: 10px;    
+    padding: 10px;
+    border: none;
+    background: var(--colorBotonesFondoDefecto);
+    color: white;
+}
+
+.bottonRedondeado{
+    border-radius: 51%;
+}
+
+.bottonPocoRedondeado{
+    border-radius: 20px;
+}
+
+.bottonSombreado{
+    box-shadow:0px 0px 10px var(--colorBotonesSombraDefecto);
 }
 
 
