--- a/css/_esqueletos.css
+++ b/css/_esqueletos.css
@@ -21,6 +21,11 @@ main {
   grid-gap: 1em;
 }
 
+main section{
+  min-height: 20em;
+  padding: 1em;
+}
+
 /*Main tipos*/
 body.simple.simple__main--columnas main {
   grid-template-columns: repeat(2, 1fr);
@@ -28,7 +33,6 @@ body.simple.simple__main--columnas main {
 
 body.simple.simple__main--filas main  {
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, 1fr);
 }
 
 
@@ -103,7 +107,7 @@ body.simple.simple--navHorizontal {
     "navegacion"
     "principal"
     "pie";
-    grid-template-rows: 200px auto 80% auto;
+    grid-template-rows: 7.5em 4.3em auto 4.5em;
 }
 
 
@@ -173,7 +177,7 @@ body.simple.simple--navVertical {
     "cabecera cabecera cabecera cabecera"
     "navegacion principal principal principal"
     "pie pie pie pie";
-    grid-template-rows: auto 80% auto;
+    grid-template-rows: 7.5em 80% 4.5em;
     grid-template-columns: 20% auto auto auto;
 }
 
@@ -198,4 +202,4 @@ body.simple.simple--navVertical nav ul li:hover ul {
 /*bugs*/
 body.simple.simple--navVertical.simple__aside aside{
   display: none;
-} 
+}
