--- a/css/_variables.css
+++ b/css/_variables.css
@@ -8,4 +8,11 @@
     --colorHoverBlanqueado:#ffffff;
     --colorBotonesFondoDefecto:#333333;
     --colorBotonesSombraDefecto:#333333;
+
+    --colorBordeMenu:white;
+    --colorFondoLiPrincipalesMenu:white;
+    --colorFondoLiSubmenuMenu:#4d4d4d;
+    --colorFondoMenu:#333;
+    --colorLetraMenu:white;
+    --colorFlechaSubMenuSuperior:var(--colorFondoLiSubmenuMenu);
 }
