--- a/css/artiframe.css
+++ b/css/artiframe.css
@@ -2,9 +2,10 @@
 @import url('./_variables.css');
 @import url('./_botones.css');
 @import url('./_esqueletos.css');
-@import url('./_pies1.css');
+@import url('./_pies.css');
 @import url('./_cabeceras.css');
 @import url('./_cuerpo.css');
 @import url('./_hover.css');
 @import url('./_tooltips.css');
 @import url('./_articulos.css');
+@import url('./_menu.css');
