--- a/css/_articulos.css
+++ b/css/_articulos.css
@@ -1,3 +1,15 @@
+/*
+El componente permite crear un articulo con una foto y decidir en que posición va la foto.
+*/
+
+article{
+    display: grid;
+    grid-template-areas: 'cabeceraArticle imagen'
+                         'cuerpo imagen';
+    grid-template-rows:2em auto;
+    grid-template-columns: 70% 30%;
+}
+
 article p{
    grid-area: cuerpo;
 }
@@ -14,13 +26,6 @@ article img{
     width: 100%;
 }
 
-article{
-    display: grid;
-    grid-template-areas: 'cabeceraArticle imagen'
-                         'cuerpo imagen';
-    grid-template-rows:2em auto;
-    grid-template-columns: 70% 30%;
-}
 
 article.img__derecha{
     display: grid;
