--- a/css/_botones.css
+++ b/css/_botones.css
@@ -3,6 +3,8 @@ button{
     border: none;
     background: var(--colorBotonesFondoDefecto);
     color: white;
+    transition: transform 0.2s;
+    cursor: pointer;
 }
 
 .bottonRedondeado{
@@ -17,6 +19,14 @@ button{
     box-shadow:0px 0px 10px var(--colorBotonesSombraDefecto);
 }
 
+
+button:hover{
+transform: scale(1.06);
+}
+
+button:active{
+    transform: scale(1);
+}
 
 
 
