--- a/css/_menu.css
+++ b/css/_menu.css
@@ -1,148 +1,208 @@
-/*Defecto estilos (colores) nav*/
-nav {
-    background: var(--colorFondoMenu);
-    color: var(--colorLetraMenu);
+nav{
+    background: var(--colorTerciario);
+}
+
+nav *{
+    color: var(--colorGeneralLetra);
+}
+
+nav ul li ul{
+    background: transparent;
+}
+
+nav ul li ul li{
+    background: var(--colorPrincipal);
+}
+
+nav ul li ul li:hover{
+    background: var(--colorSecundario);
+}
+
+body nav ul li:hover{
+    background: var(--colorSecundario);
+}
+
+body nav ul li ul li{
+    border-bottom: 2px solid var(--colorTerciario);
+}
+
+nav ul li ul li:last-child {
+    border-bottom: none;
+}
+body.simple--navVertical nav ul li{
+    border-bottom: 2px solid var(--colorSecundario);
+}
+
+body.simple--navVertical nav ul li:last-child {
+    border-bottom: none;
 }
 
 nav a {
-    color: var(--colorLetraMenu);
     text-decoration: none;
 }
 
-nav ul li ul {
-    background: var(--colorFondoLiSubmenuMenu);
-}
-
-nav ul li ul li {
-    border-bottom: 1px solid var(--colorBordeMenu);
-}
-
-/*Funcionalidad Submenus Nav*/
 nav ul li {
     position: relative;
     cursor: pointer;
     list-style: none;
+    z-index: 3;
 }
 
 nav ul li ul {
-    display: none;
+    max-height: 0vh;
+    max-width: 0%;
+    overflow: hidden;
     position: absolute;
     top: 100%;
     width: 100%;
-    z-index: 1;
-    transition: all 1s;
 }
 
 nav ul li:hover ul {
-    display: block;
-    background: red;
+    max-height: 100vh;
+    max-width: 100%;
 }
 
+
+body nav ul li:hover ul > li:first-child::before {
+    /*circunflejo css al hacer hover*/
+    color: var(--colorPrincipal); 
+    display: block;
+    position: absolute;
+}
+
+
+
 /*Nav Vertical tiene el submenu dos tipos despliegue, el despligue defecto y el despliegue flotado que al lado que se despliega depende de la posicion del nav*/ 
-body.simple.simple--navVertical nav ul li:hover ul {
+body.simple--navVertical nav ul li:hover ul {
     position: relative;
     margin: 0.7em 0px;
     margin-bottom: 0em;
+    transition: max-height 400ms ease;
 }
 
-body.simple.simple--navVertical nav.despligueFlotado ul li:hover ul { /*Por defecto esta en la izquierda el nav vertical asi que por defecto el menu se despliega hacia la derecha*/
+
+body.simple--navVertical nav.despligueFlotado ul li:hover ul{
     position: absolute;
     top: 0%;
+    margin:0px;
+    transition: left 400ms ease;
+}
+
+
+body.simple--navVertical nav.despligueFlotado ul li ul {left: 90%;}
+body.simple--navVertical nav.despligueFlotado ul li:hover ul { /*Por defecto esta en la izquierda el nav vertical asi que por defecto el menu se despliega hacia la derecha*/
     left: 100%;
-    margin:0px;
 }
 
-body.simple.simple--navVertical.--navVertical--derecha nav.despligueFlotado ul li:hover ul { /*Aqui la opcion de despliegue si esta el nav en la derecha pues el submenu se despliega ala derecha*/
-    position: absolute;
-    right:100%;
-    margin:0px;
+body.simple--navVertical.--navVertical--derecha nav.despligueFlotado ul li ul {left: -90%;}
+body.simple--navVertical.--navVertical--derecha nav.despligueFlotado ul li:hover ul { /*Menu derecha submenu izquierda*/
+    left: -100%;
 }
 
-body.simple.simple--navVertical nav ul>li {
+/*CIRCUNFLEJO MENU IZQUIERDA*/
+body.simple--navVertical nav.despligueFlotado ul li:hover ul > li{
+    margin-left: 2.55em;
+}
+body.simple--navVertical nav.despligueFlotado ul li:hover ul > li:first-child::before {
+    /*circunflejo css al hacer hover*/
+    font-size: 60px;
+    content: "\25C0";
+    top: -.30em;
+    left: -.75em;
+}
+
+
+
+/*CIRCUNFLEJO MENU DERECHA*/
+body.simple--navVertical.--navVertical--derecha nav.despligueFlotado ul li:hover ul > li{
+    margin-right: 2.55em;
+}
+
+body.simple--navVertical.--navVertical--derecha nav.despligueFlotado ul li:hover ul > li:first-child::before{
+    font-size: 61px;
+    content: "\25B6";
+    top: -.30em;
+    left:97%;
+}
+
+body.simple--navVertical nav ul li {
     padding: 1em 0em;
+    text-indent: 1em; /*Mover el texto hacia la derecha*/
 }
 
-body.simple.simple--navVertical nav ul li:hover ul li {
+body.simple--navVertical nav.despligueFlotado  ul > li {
+    padding: 1em 1em;
+    text-indent: 0em;
+}
+
+
+body.simple--navVertical nav ul li:hover ul li {
     padding-bottom: 1em;
 }
 
-/*NAV HORIZONTAL*/
-body.simple.simple--navHorizontal nav ul li:hover ul::after {
-    /*circunflejo css al hacer hover*/
-    content: " ";
-    position: absolute;
-    top: -0.9em;
-    transform: rotate(180deg);
-    width: 0;
-    height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-top: 14px solid var(--colorFlechaSubMenuSuperior);
+body.simple--navVertical nav.navVertical--centrado > ul {
+    text-align: center;
 }
 
-body.simple.simple--navHorizontal nav {
+body.simple--navVertical nav.navVertical--izquierda>ul {
+    text-align: left;
+}
+
+body.simple--navVertical nav.navVertical--derecha>ul {
+    text-align: right;
+} 
+
+
+
+/*NAV HORIZONTAL*/
+
+body.simple--navHorizontal nav ul li:hover ul > li:first-child{
+    margin-top: 1em;
+}
+
+body.simple--navHorizontal nav ul li:hover ul > li:first-child::before {
+    /*circunflejo css al hacer hover*/
+    font-size: 22px; 
+    content: "\25B2"; 
+    position: absolute;
+    top: -1em;
+    left: -3px;
+}
+
+body.simple--navHorizontal nav > ul li:hover ul{
+    transition: max-height 3s ease;
+}
+
+body.simple--navHorizontal nav {
     display: grid;
     align-items: center;
 }
 
-body.simple.simple--navHorizontal nav>ul {
+body.simple--navHorizontal nav > ul {
     display: grid;
     align-content: center;
     grid-auto-flow: column;
     list-style: none;
     padding: 0.2em;
+    justify-content: center;
 }
 
-body.simple.simple--navHorizontal nav>ul li {
+body.simple--navHorizontal nav > ul li {
     max-width: 15em;
     min-width: 10em;
     padding: 1em;
 }
 
-body.simple.simple--navHorizontal nav.navHorizontal--centrado>ul {
+
+
+body.simple--navHorizontal nav.navHorizontal--centrado>ul {
     justify-content: center;
 }
 
-body.simple.simple--navHorizontal nav.navHorizontal--izquierda>ul {
+body.simple--navHorizontal nav.navHorizontal--izquierda>ul {
     justify-content: left;
 }
 
-body.simple.simple--navHorizontal nav.navHorizontal--derecha>ul {
+body.simple--navHorizontal nav.navHorizontal--derecha>ul {
     justify-content: right;
 }
-
-body.simple.simple--navHorizontal nav ul li:hover ul {
-    display: block;
-    width: 100%;
-    top: 100%;
-    position: absolute;
-    z-index: 20;
-}
-
-/*Vertical*/
-body.simple.simple--navVertical nav {}
-
-body.simple.simple--navVertical nav ul li {
-    border-bottom: 1px solid var(--colorBordeMenu);
-}
-
-body.simple.simple--navVertical nav ul li ul li:last-child {
-    border-bottom: none;
-}
-
-body.simple.simple--navVertical nav.navVertical--centrado>ul {
-    text-align: center;
-}
-
-body.simple.simple--navVertical nav.navVertical--izquierda>ul {
-    text-align: left;
-}
-
-body.simple.simple--navVertical nav.navVertical--derecha>ul {
-    text-align: right;
-}
-
-/* Horizontal */
-body.simple.simple--navHorizontal nav {}
-
-body.simple.simple--navHorizontal nav ul li {}
