Carrusel primera version, con variable definida en html

--- a/css/_menu.css
+++ b/css/_menu.css
@@ -15,11 +15,11 @@ nav ul li ul li{
 }
 
 nav ul li ul li:hover{
-    background: var(--colorSecundario);
+    background: var(--colorCuaternario);
 }
 
 body nav ul li:hover{
-    background: var(--colorSecundario);
+    background: var(--colorCuaternario);
 }
 
 body nav ul li ul li{
