--- a/css/_variables.css
+++ b/css/_variables.css
@@ -3,5 +3,6 @@
     --colorPrincipal:#B38D97;
     --colorSecundario:#D5ACA9;
     --colorTerciario:#EBCFB2;
+    --colorCuaternario:#d1a7b1;
     --colorGeneralLetra:black;
 }
