CAMBIOS EN EL FORMULARIO

--- a/css/_forms.css
+++ b/css/_forms.css
@@ -32,7 +32,7 @@
 }
 
 .form-container button {
-    background-color: #007bff;
+    background-color: var(--colorPrincipal);
     color: white;
     border: none;
     cursor: pointer;
