--- a/css/artiframe.css
+++ b/css/artiframe.css
@@ -11,3 +11,9 @@
 @import url('./_menu.css');
 @import url('./_forms.css');
 @import url('./_carrusel.css');
+
+
+
+
+
+@import url('./_modal.css');
