--- a/css/_carrusel.css
+++ b/css/_carrusel.css
@@ -8,13 +8,16 @@
 .carrusel div {
     display: flex;
     position: absolute;
-    animation: pasarela 10s linear infinite;
+    animation: pasarela 10s infinite;
+    animation-timing-function: steps(var(--numeroImagenes));
     width: calc(400px * var(--numeroImagenes));
 }
 
 .carrusel div img {
     width: 400px;
     height: 400px;
+    animation: slide calc(10s / var(--numeroImagenes)) ease-in-out infinite forwards;
+    opacity: 0; 
 }
 
 @keyframes pasarela {
@@ -25,3 +28,42 @@
         transform: translateX(calc(-400px * var(--numeroImagenes)));
     }
 }
+
+/* @keyframes slide {
+    0% {
+        transform: translateX(100%)  scale(0.8);
+        opacity: 0;
+    }
+    10% {
+        transform: translateX(0) rotate(0deg) scale(1);
+        opacity: 1;
+    }
+    90% {
+        transform: translateX(0) scale(1); 
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-100%)  scale(0.8);
+        opacity: 0;
+    }
+} */
+
+
+@keyframes slide {
+    0% {
+        transform: translateY(-100%) scale(0.8); 
+        opacity: 0;
+    }
+    10% {
+        transform: translateY(0) scale(1);  
+        opacity: 1;
+    }
+    90% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-100%) scale(0.8); 
+        opacity: 0;
+    }
+} 
