--- a/css/_articulos.css
+++ b/css/_articulos.css
@@ -1,36 +1,36 @@
 article p{
-   grid-area: cuerpo;
+   grid-area: cuerpoArt;
 }
 
 article header{
-    grid-area: cabecera;
+    grid-area: cabeceraArt;
  }
 
 article img{
     grid-area: imagen;
     box-shadow: 0.5em 0.5em 1em;
-    border: 0.5em solid var(--colorTerciario);
-    width: 100%;
+    width: 80%;
 }
 
 article{
     display: grid;
-    grid-template-areas: 'cabecera imagen'
-                         'cuerpo imagen';
+    grid-template-areas: 'cabeceraArt imagen'
+                         'cuerpoArt imagen';
     grid-template-rows: 10% 90%;
     grid-template-columns: 70% 30%;
+    
 }
 
 article.img__derecha{
     display: grid;
-    grid-template-areas: 'cabecera imagen'
-                         'cuerpo imagen';
+    grid-template-areas: 'cuerpoArt imagen'
+                         'cuerpoArt imagen';
 }
 
 article.img__izquierda{
     display: grid;
-    grid-template-areas: 'imagen cabecera'
-                         'imagen cuerpo';
+    grid-template-areas: 'imagen cabeceraArt'
+                         'imagen cuerpoArt';
 }
 
 
