--- a/css/_cuerpo.css
+++ b/css/_cuerpo.css
@@ -1,11 +1,10 @@
 main{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto, 1fr);
     grid-gap: 1em;
 }
 
 
 main section{
     background: var(--colorSecundario);
-
 }
