--- a/css/_gallery.css
+++ b/css/_gallery.css
@@ -12,6 +12,7 @@
 
     .container {
         flex: 1;
+        overflow: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -26,11 +27,15 @@
         width: 100%;
     }
 
-    .gallery a {
+    .gallery>a {
         width: 32%;
         margin: 5px 0;
-        opacity: 0;
+        
+    }
+
+    .gallery.animada a {
         animation: entrada 1s forwards;
+        opacity: 0;
     }
 
     .gallery img {
@@ -71,15 +76,15 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.8);
+        background: rgba(0, 0, 0, 0.5);
         justify-content: center;
         align-items: center;
         z-index: 10;
     }
 
     .overlay img {
-        max-width: 90%;
-        max-height: 90%;
+        max-width: 20%;
+        max-height: 20%;
         border-radius: 8px;
         animation-fill-mode: forwards;
         animation: enlarge 1s ease-out forwards;
@@ -88,12 +93,10 @@
     @keyframes enlarge {
         from {
             transform: scale(0.5);
-            opacity: 0;
         }
 
         to {
             transform: scale(4);
-            opacity: 1;
         }
     }
 
