--- a/css/_gallery.css
+++ b/css/_gallery.css
@@ -13,6 +13,7 @@
     .container {
         flex: 1;
         overflow: hidden;
+        height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -25,14 +26,35 @@
         justify-content: space-between;
         max-width: 100%;
         width: 100%;
+        position: relative;
     }
 
     .gallery>a {
         width: 32%;
+        height: auto;
         margin: 5px 0;
         
     }
 
+    .gallery>a:active{
+        width: 100%;
+        height: 100vh;
+        z-index: 10;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.5);
+    }
+
+    .gallery>a img{
+        width: 100%;
+    
+    }
+    .gallery>a:active img{
+        margin:2em auto ;
+        width: 50%;
+        transition: width 0.5s;
+    }
     .gallery.animada a {
         animation: entrada 1s forwards;
         opacity: 0;
@@ -67,51 +89,4 @@
 
     .gallery a:nth-child(6) {
         animation-delay: 1.2s;
-    }
-
-    .overlay {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        justify-content: center;
-        align-items: center;
-        z-index: 10;
-    }
-
-    .overlay img {
-        max-width: 20%;
-        max-height: 20%;
-        border-radius: 8px;
-        animation-fill-mode: forwards;
-        animation: enlarge 1s ease-out forwards;
-    }
-
-    @keyframes enlarge {
-        from {
-            transform: scale(0.5);
-        }
-
-        to {
-            transform: scale(4);
-        }
-    }
-
-    .overlay:target {
-        display: flex;
-    }
-
-    .close-btn {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        font-size: 24px;
-        color: white;
-        text-decoration: none;
-        background: #444;
-        padding: 5px 10px;
-        border-radius: 5px;
     }
