--- a/css/_forms.css
+++ b/css/_forms.css
@@ -27,10 +27,9 @@
 }
 
 .form-container input, button {
-    width: 90%;
-    padding: 8px;
-    margin-bottom: 10px;
-    font-size: 14px;
+    width: 100%;
+    padding: 1em;
+    margin-bottom: 1em;
     box-sizing: border-box;
 }
 
